--- a/circle.html
+++ b/circle.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>How to create a small circle using a div</h1>
-	<div class="small circle">
+	<div class="big circle">
 		
 	<div>
 	<h1>How to create a circle using a div</h1>
